// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scan > isComponent > vite-native components 1`] = `
[
  "HelloWorld/HelloWorld.wxml",
  "HelloWorld/index.wxml",
  "HiChina/HiChina.wxml",
  "avatar/avatar.wxml",
  "icebreaker/index.wxml",
  "navigation-bar/navigation-bar.wxml",
  "test.wxml",
]
`;

exports[`scan > isComponent > vite-native components 2`] = `
[
  "HelloWorld/HelloWorld.wxml",
  "HelloWorld/index.wxml",
  "HiChina/HiChina.wxml",
  "icebreaker/index.wxml",
]
`;
